--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
+  bot_toast: ^4.1.3
   flutter:
     sdk: flutter
+  go_router: ^13.0.0
   lottie: ^2.7.0
 
 dev_dependencies:
