--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^13.0.0
+  iconify_flutter_plus: ^1.0.3
   lottie: ^2.7.0
 
 dev_dependencies:
