--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   bot_toast: ^4.1.3
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.9
   go_router: ^13.0.0
   iconify_flutter_plus: ^1.0.3
   lottie: ^2.7.0
@@ -24,6 +25,8 @@ flutter:
   
   assets:
     - assets/animations/
+    - assets/svgs/
+    - assets/images/
 
   fonts:
     - family: Poppins
