--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   bot_toast: ^4.1.3
   flutter:
     sdk: flutter
+  flutter_animate: ^4.3.0
   flutter_hooks: ^0.20.4
   flutter_svg: ^2.0.9
   go_router: ^13.0.0
