--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,13 @@ dev_dependencies:
   build_runner: ^2.4.7
   custom_lint: ^0.5.7
   riverpod_lint: ^2.3.7
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+
 
 flutter:
   uses-material-design: true
