--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   iconify_flutter_plus: ^1.0.3
   lottie: ^2.7.0
   riverpod_annotation: ^2.3.3
+  share_plus: ^7.2.1
   utils_plus: ^0.0.2
 
 dev_dependencies:
