--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,11 @@ dependencies:
   go_router: ^13.0.0
   hooks_riverpod: ^2.4.9
   iconify_flutter_plus: ^1.0.3
+  image_gallery_saver: ^2.0.3
   lottie: ^2.7.0
+  path_provider: ^2.1.1
   riverpod_annotation: ^2.3.3
+  screenshot: ^2.1.0
   share_plus: ^7.2.1
   utils_plus: ^0.0.2
 
